--- a/wiki/%E9%87%91.wikitext
+++ b/wiki/%E9%87%91.wikitext
@@ -31,6 +31,119 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': gam1
 
+===Compounds===
+*[[金榜]]
+*[[金镑]]
+*[[金本位]]
+*[[金笔]]
+*[[金币]]
+*[[金碧辉煌]]
+*[[金箔]]
+*[[金不换]]
+*[[金灿灿]], [[金灿灿的]]
+*[[金蝉脱壳]]
+*[[金城汤池]]
+*[[金疮]]
+*[[金殿]]
+*[[金额]]
+*[[金发]]
+*[[金饭碗]]
+*[[金粉]]
+*[[金风]]
+*[[金刚]]
+*[[金刚努目]]
+*[[金刚砂]]
+*[[金刚石]]
+*[[金刚石婚]]
+*[[金刚钻]]
+*[[金糕]]
+*[[金戈铁马]]
+*[[金工]]
+*[[金箍棒]]
+*[[金瓜]]
+*[[金龟]]
+*[[金龟子]]
+*[[金贵]]
+*[[金红]]
+*[[金环蛇]]
+*[[金煌煌]], [[金煌煌的]], [[金晃晃]], [[金晃晃的]]
+*[[金黄]]
+*[[金婚]]
+*[[金鸡]]
+*[[金鸡独立]]
+*[[金甲]]
+*[[金浆玉醴]]
+*[[金奖]]
+*[[金交椅]]
+*[[金酒]]
+*[[金橘]]
+*[[金科玉律]]
+*[[金壳郎]]
+*[[金口]]
+*[[金口玉言]]
+*[[金库]]
+*[[金兰]]
+*[[金莲]], [[金莲儿]]
+*[[金莲花]]
+*[[金铃子]]
+*[[金绿玉]]
+*[[金銮殿]]
+*[[金马玉堂]]
+*[[金迷纸醉]]
+*[[金牛座]]
+*[[金牌]]
+*[[金钱]]
+*[[金钱板]]
+*[[金钱豹]]
+*[[金钱草]]
+*[[金钱松]]
+*[[金枪鱼]]
+*[[金秋]]
+*[[金融]]
+*[[金融寡头]]
+*[[金融危机]]
+*[[金融资本]]
+*[[金嗓子]]
+*[[金色]]
+*[[金闪闪]], [[金闪闪的]]
+*[[金身]]
+*[[金石]]
+*[[金属]]
+*[[金属陶瓷]]
+*[[金丝猴]]
+*[[金丝雀]]
+*[[金丝燕]]
+*[[金汤]]
+*[[金条]]
+*[[金文]]
+*[[金乌]]
+*[[金相玉质]]
+*[[金星]]
+*[[金言]]
+*[[金疡]]
+*[[金钥匙]]
+*[[金银财宝]]
+*[[金银花]]
+*[[金鱼]]
+*[[金鱼草]]
+*[[金鱼虫]]
+*[[金鱼藻]]
+*[[金玉]]
+*[[金玉良言]]
+*[[金玉满堂]]
+*[[金圆券]]
+*[[金盏花]]
+*[[金针]]
+*[[金针菜]]
+*[[金枝玉叶]]
+*[[金质]]
+*[[金钟儿]]
+*[[金镯]]
+*[[金字旁儿]]
+*[[金字塔]]
+*[[金字招牌]]
+*[[金子]]
+
 * '''Other info''': 
 
 ----
