Fuller defn, folded in alternate spelling <Tanakh#39871>

--- a/wiki/Tanakh.wikitext
+++ b/wiki/Tanakh.wikitext
@@ -1,10 +1,7 @@
-=== Noun ===
-'''tanakh'''<!-- should it be capitalised? -->
+===Proper Noun===
+'''Tanakh''', also '''Tanach'''
 
-#The [[Jewish]] Holy book.
-
-==== Alternative spellings ====
-*[[tanach]]<!-- should it be capitalised? -->
+#The body of [[Jewish]] comprising the [[Torah]], the [[Neviim]] (prophets) and the [[Ketuvim]] (writings), corresponding roughly to the Christian [[Old Testament]].
 
 ==== Translations ====
 *Dutch: [[tenach]]
@@ -12,3 +9,7 @@
 *Hebrew: [[תנך]]
 *Spanish: [[tanaj]]
 *Swedish: tanakh
+
+===See Also===
+*[[Old Testament]]
+*[[Torah]]
