redirect to [[Tanakh]] <Tanach#35838>

--- a/wiki/Tanach.wikitext
+++ b/wiki/Tanach.wikitext
@@ -1,14 +1,1 @@
-=== Noun ===
-'''tanach'''<!-- should it be capitalised? -->
-
-#The [[Jewish]] Holy book.
-
-==== Alternative spellings ====
-*[[tanakh]]<!-- should it be capitalised? -->
-
-==== Translations ====
-*Dutch: [[tenach]]
-*German: Tanach
-*Hebrew: [[תנך]]
-*Spanish: [[tanaj]]
-*Swedish: [[tanakh]]
+#REDIRECT [[Tanakh]]
