--- a/wiki/Tanakh.wikitext
+++ b/wiki/Tanakh.wikitext
@@ -1,7 +1,7 @@
 ===Proper Noun===
 '''Tanakh''', also '''Tanach'''
 
-#The body of [[Jewish]] comprising the [[Torah]], the [[Neviim]] (prophets) and the [[Ketuvim]] (writings), corresponding roughly to the Christian [[Old Testament]].
+#The body of [[Jewish]] scripture comprising the [[Torah]], the [[Neviim]] (prophets) and the [[Ketuvim]] (writings), corresponding roughly to the Christian [[Old Testament]].
 
 ==== Translations ====
 *Dutch: [[tenach]]
