coordinated with Tanakh <Old Testament#65512>

--- a/wiki/Old_Testament.wikitext
+++ b/wiki/Old_Testament.wikitext
@@ -1,6 +1,9 @@
 ==English==
 ===Proper Noun===
-#The Old Testament or the [[Hebrew Scriptures]] constitutes the first major part of the Christian Bible, usually divided into the categories law, history, poetry (or wisdom books) and prophecy. All of these books were written before the coming of Christ.
+# The first major part of the Christian Bible, covering events before the coming of Christ, corresponding roughly to the Jewish [[Tanakh]].  Usually subdivided into the categories of law, history, poetry (or wisdom books) and prophecy. 
 
 ===See Also===
-*[[w:Old Testament|Old Testament]]
+*[[Hebrew Scriptures]]
+*[[Tanakh]]
+
+*[[w:Old Testament|Wikipedia article on the Old Testament]]
