fmt, separated Old Testament and Tanakh senses, as they differ slightly <Hebrew Scriptures#65513>

--- a/wiki/Hebrew_Scriptures.wikitext
+++ b/wiki/Hebrew_Scriptures.wikitext
@@ -1,1 +1,7 @@
-Another name for [[Old Testament]] or [[Tanakh]]([[תנך]]).
+==English==
+
+===Proper Noun===
+'''Hebrew Scriptures'''
+
+# The [[Old Testament]]
+# The [[Tanakh]]([[תנך]])
