--- a/wiki/%D7%AA%D7%A0%D7%9A.wikitext
+++ b/wiki/%D7%AA%D7%A0%D7%9A.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''תנך'''
 
-# The [[Holy book]] of [[Judaism]].
+# The [[Tanakh]]
 
 ====Translations====
-*English: [[Tanakh]], [[Tanach]]
+*English: [[Tanakh]]
