--- a/wiki/Tanach.wikitext
+++ b/wiki/Tanach.wikitext
@@ -1,1 +1,12 @@
-#REDIRECT [[Tanakh]]
+==English==
+===Proper noun===
+'''Tanach'''
+
+#Variant spelling of [[Tanakh]]
+----
+
+==German==
+===Proper noun===
+'''Tanach'''
+
+# [[Tanakh]]
