--- a/wiki/Oklahoma.wikitext
+++ b/wiki/Oklahoma.wikitext
@@ -1,6 +1,14 @@
 ==English==
 
+===Etymology===
+
+Comes from the [[Choctaw]] people.  "Okla" roughly means "the people" and "homa" means "red".
+
 ===Proper noun===
 
-# A [[southwest]] [[state]] of the [[United States]].  Was admitted into the [[Union]] on November 16, 1907 as the the 46th state of the United States.  Name comes from the [[Choctaw]] people ("Okla" roughly means "the people" and "homa" means "red").
+# A [[southwest]] [[state]] of the [[United States]].  Was admitted into the [[Union]] on November 16, 1907 as the the 46th state of the United States.
 # A [[county]] in the state of Oklahoma.
+
+====See also====
+
+*[[Wikipedia]] article on [[w:Oklahoma|Oklahoma]]
