--- a/wiki/%E9%85%B8.wikitext
+++ b/wiki/%E9%85%B8.wikitext
@@ -11,15 +11,15 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#tart, sour
-*# acid
-*# stiff
-*# spoiled
+*# [[tart]], [[sour]]
+*# [[acid]]
+*# [[stiff]]
+*# [[spoiled]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,15 +31,56 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': syun1
 
+===Compounds===
+*[[酸败]]
+*[[酸不唧]], [[酸不唧儿的]]
+*[[酸不拉唧]], [[酸不拉唧的]]
+*[[酸不溜丢]], [[酸不溜丢的]]
+*[[酸菜]]
+*[[酸楚]]
+*[[酸腐]]
+*[[酸酐]]
+*[[酸根]]
+*[[酸碱度]]
+*[[酸浆]]
+*[[酸苦]]
+*[[酸辣]]
+*[[酸懒]]
+*[[酸溜溜]], [[酸溜溜的]]
+*[[酸马奶]]
+*[[酸梅]]
+*[[酸梅汤]]
+*[[酸奶]]
+*[[酸牛奶]]
+*[[酸软]]
+*[[酸式盐]]
+*[[酸甜苦辣]]
+*[[酸甜儿]]
+*[[酸痛]]
+*[[酸味]], [[酸味儿]]
+*[[酸文假醋]]
+*[[酸心]]
+*[[酸辛]]
+*[[酸性]]
+*[[酸雨]]
+*[[酸枣]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[さん]] (san)
 ** '''[[Kun]]''': [[すい]] (sui), [[す]] (su), [[つらい]] (tsurai)
+
+===Compounds===
+*[[酸化]]
+*[[酸性]]
+*[[酸素]]
+*[[酸鼻]]
+*[[酸味]]
 
 * '''Other info''':  
 
