--- a/wiki/%E5%BD%95.wikitext
+++ b/wiki/%E5%BD%95.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': copy, write down, record
+* '''Common Meaning''': [[copy]], [[write down]], [[record]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,26 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[錄]], [[録]]
+
+===Compounds===
+*[[录放]]
+*[[录供]]
+*[[录取]]
+*[[录取线]]
+*[[录像]]
+*[[录像带]]
+*[[录像机]]
+*[[录像片儿]]
+*[[录像片]]
+*[[录写]]
+*[[录音]]
+*[[录音带]]
+*[[录音电话]]
+*[[录音机]]
+*[[录影]]
+*[[录用]]
+*[[录载]]
+*[[录制]]
 
 * '''Other info''': 
 
