--- a/wiki/%E7%BE%8E.wikitext
+++ b/wiki/%E7%BE%8E.wikitext
@@ -11,8 +11,8 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*# beautiful, pretty
-*# pleasing
+*# [[beautiful]], [[pretty]]
+*# [[pleasing]]
 *# short form for 美國 ([[United States of America]])
 
 ----
@@ -29,15 +29,77 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': mei5
 
+===Compounds===
+*[[美不胜收]]
+*[[美不滋]], [[美不滋的]]
+*[[美餐]]
+*[[美差]]
+*[[美称]]
+*[[美德]]
+*[[美发]]
+*[[美发厅]]
+*[[美感]]
+*[[美工]]
+*[[美观]]
+*[[美好]]
+*[[美化]]
+*[[美劲儿]]
+*[[美景]]
+*[[美酒]]
+*[[美丽]]
+*[[美满]]
+*[[美貌]]
+*[[美美]], [[美美的]]
+*[[美梦]]
+*[[美妙]]
+*[[美名]]
+*[[美女]]
+*[[美其名曰]]
+*[[美人]], [[美人儿]]
+*[[美人记]]
+*[[美人蕉]]
+*[[美容]]
+*[[美食]]
+*[[美事]]
+*[[美术]]
+*[[美术片]]
+*[[美术字]]
+*[[美谈]]
+*[[美味]], [[美味儿]]
+*[[美学]]
+*[[美言]]
+*[[美艳]]
+*[[美意]]
+*[[美玉无瑕]]
+*[[美育]]
+*[[美誉]]
+*[[美展]]
+*[[美中不足]]
+*[[美滋滋]], [[美滋滋的]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[び]] (bi), [[み]] (mi)
 ** '''[[Kun]]''': [[うつくしい]] (utsukushii), [[よい]] (yoi), [[ほめる]] (homeru)
+
+===Compounds===
+*[[美化]]
+*[[美学]]
+*[[美辞麗句]]
+*[[美術]]
+*[[美女]]
+*[[美人]]
+*[[美声]]
+*[[美談]]
+*[[美点]]
+*[[美徳]]
+*[[美男]]
+*[[美容]]
 
 * '''Other info''':  
 
