--- a/wiki/%E5%89%80.wikitext
+++ b/wiki/%E5%89%80.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#sharpen
-*# carefully, thorough
+*# [[sharpen]]
+*# [[carefully]], [[thorough]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -33,6 +33,9 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[剴]]
+
+===Compounds===
+*[[剀切]]
 
 * '''Other info''': 
 
