--- a/wiki/%E9%93%A0.wikitext
+++ b/wiki/%E9%93%A0.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': armor, chain mail
+* '''Common Meaning''': [[armour]], [[chain mail]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,9 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[鎧]]
+
+===Compounds===
+*[[铠甲]]
 
 * '''Other info''': 
 
