--- a/wiki/%E6%A5%B7.wikitext
+++ b/wiki/%E6%A5%B7.wikitext
@@ -10,15 +10,17 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': model style of Chinese writing
+* '''Common Meaning''':
+*# [[model]], [[pattern]]
+*# model style of Chinese writing
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': kǎi (kai3)
+*** '''[[Pinyin]]''': (jie1), kǎi (kai3)
 *** '''[[Wade-Giles]]''': k'ai<sup>3</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -26,15 +28,25 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': gaai1, kaai2
 
+===Compounds===
+*[[楷范]]
+*[[楷模]]
+*[[楷式]]
+*[[楷书]]
+*[[楷体]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[かい]] (kai)
 ** '''[[Kun]]''': [[かた]] (kata), [[のっとる]] (nottoru), [[ただしい]] (tadashii)
+
+===Compounds===
+*[[楷書]]
 
 * '''Other info''':  
 
