--- a/wiki/precipice.wikitext
+++ b/wiki/precipice.wikitext
@@ -1,5 +1,5 @@
 ===Noun===
-'''precipice''' ([[precipices]])
+'''precipice''' ([[precipices]]) is a very steep cliff
 
 ====Synonyms====
 *[[cliff]]
