--- a/wiki/conjugation.wikitext
+++ b/wiki/conjugation.wikitext
@@ -2,7 +2,7 @@
 '''conjugation''' ([[conjugations]])
 #The coming together of things
 #The fusion of organisms
-#Tha variation of verbs by inflection
+#The variation of verbs by inflection
 ====Related terms====
 *[[conjugate]]
 
