--- a/wiki/precipice.wikitext
+++ b/wiki/precipice.wikitext
@@ -13,4 +13,5 @@
 *German: [[Abgrund]] ''m''
 *Greek: [[βάραθρο]] ''n''
 *Korean: [[절벽]]
+*Russia: [[обрыв]] ''m'', [[пропасть]] ''f''
 *Spanish: [[precipicio]] ''m''
