--- a/wiki/%E8%BE%93.wikitext
+++ b/wiki/%E8%BE%93.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': transport, carry, haul
+* '''Common Meaning''': [[transport]], [[carry]], [[haul]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,30 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[輸]]
+
+===Verb===
+
+#[[lose]], be [[beaten]], be [[defeated]]
+
+====Antonym====
+*[[赢]]
+
+===Compounds===
+*[[输不起]]
+*[[输出]]
+*[[输电]]
+*[[输家]]
+*[[输精管]]
+*[[输理]]
+*[[输卵管]]
+*[[输尿管]]
+*[[输入]]
+*[[输送]]
+*[[输血]]
+*[[输氧]]
+*[[输液]]
+*[[输赢]]
+*[[输油管]]
 
 * '''Other info''': 
 
