--- a/wiki/precipice.wikitext
+++ b/wiki/precipice.wikitext
@@ -12,6 +12,7 @@
 *French: [[précipice]] ''m''
 *German: [[Abgrund]] ''m''
 *Greek: [[βάραθρο]] ''n''
+*Italian: [[burrone]] ''m'', [[dirupo]] ''m'', [[precipizio]] ''m''
 *Korean: [[절벽]]
 *Russia: [[обрыв]] ''m'', [[пропасть]] ''f''
 *Spanish: [[precipicio]] ''m''
