--- a/wiki/%E8%B5%A2.wikitext
+++ b/wiki/%E8%B5%A2.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#win
-*# surplus, gain, profit
+*# [[win]]
+*# [[surplus]], [[gain]], [[profit]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,17 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[贏]]
+
+===Verb===
+
+# [[win]], [[beat]]
+# [[gain]]
+
+===Compounds===
+*[[赢得]]
+*[[赢家]]
+*[[赢利]]
+*[[赢余]]
 
 * '''Other info''': 
 
