--- a/wiki/precipice.wikitext
+++ b/wiki/precipice.wikitext
@@ -1,11 +1,17 @@
 ===Noun===
-'''precipice''' ([[precipices]]) is a very steep cliff
+#a very steep cliff
+#the brink of a dangerous situation, as in ''to stand on the brink of a precipice''
+
+====Etymology====
+First attested in [[1598]], from L. [[præcipitium]] "a steep place", from [[præceps]] ''steep'', from [[præ-]] ''forth'' + [[caput]] ''head''. First meaning of the noun is recorded from 1632.
 
 ====Synonyms====
 *[[cliff]]
 
 ====Related terms====
 *[[precipitous]]
+*[[precipitously]]
+*[[precipitousness]]
 
 ====Translations====
 *Chinese: [[懸崖]], [[悬崖]]
