--- a/wiki/precipice.wikitext
+++ b/wiki/precipice.wikitext
@@ -3,7 +3,7 @@
 #the brink of a dangerous situation, as in ''to stand on the brink of a precipice''
 
 ====Etymology====
-First attested in [[1598]], from L. [[præcipitium]] "a steep place", from [[præceps]] ''steep'', from [[præ-]] ''forth'' + [[caput]] ''head''. First meaning of the noun is recorded from 1632.
+First attested in [[1598]], from L. [[præcipitium]] ''a steep place'', from [[præceps]] ''steep'', from [[præ-]] ''forth'' + [[caput]] ''head''. First meaning of the noun is recorded from 1632.
 
 ====Synonyms====
 *[[cliff]]
