--- a/wiki/precipice.wikitext
+++ b/wiki/precipice.wikitext
@@ -1,4 +1,7 @@
+==English==
 ===Noun===
+'''precipice''' ([[precipices]])
+
 #a very steep cliff
 #the brink of a dangerous situation, as in ''to stand on the brink of a precipice''
 
@@ -19,6 +22,7 @@ First attested in [[1598]], from L. [[præcipitium]] ''a steep place'', from [[p
 *German: [[Abgrund]] ''m''
 *Greek: [[βάραθρο]] ''n''
 *Italian: [[burrone]] ''m'', [[dirupo]] ''m'', [[precipizio]] ''m''
+*Japanese: [[絶壁]], [[断崖]]
 *Korean: [[절벽]]
 *Russia: [[обрыв]] ''m'', [[пропасть]] ''f''
 *Spanish: [[precipicio]] ''m''
