--- a/wiki/xeno.wikitext
+++ b/wiki/xeno.wikitext
@@ -2,3 +2,14 @@
 ===Prefix===
 '''xeno- or xen-'''
 # alien; stranger
+
+----
+==Italian==
+===Noun===
+'''xeno''' ''m''
+
+# [[xenon]]
+
+===Related terms===
+*[[xeno-]]
+[[ja:xeno]]
