--- a/wiki/%E5%AE%AA.wikitext
+++ b/wiki/%E5%AE%AA.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': constitution, statute, law
+* '''Common Meaning''': [[constitution]], [[statute]], [[law]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,15 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[憲]]
+
+===Compounds===
+*[[宪兵]]
+*[[宪法]]
+*[[宪警]]
+*[[宪令]]
+*[[宪书]]
+*[[宪章]]
+*[[宪政]]
 
 * '''Other info''': 
 
