extra hyphens <sia#65616>

--- a/wiki/sia.wikitext
+++ b/wiki/sia.wikitext
@@ -2,4 +2,4 @@
 ===Verb form===
 '''sia'''
 
-#''first, second, third-person singular subjunctive present tense of [[essere]]''
+#''first-, second- and third-person singular subjunctive present tense of [[essere]]''
