fmt; please confirm "messenger" translation <άγγελος#65595>

--- a/wiki/%CE%AC%CE%B3%CE%B3%CE%B5%CE%BB%CE%BF%CF%82.wikitext
+++ b/wiki/%CE%AC%CE%B3%CE%B3%CE%B5%CE%BB%CE%BF%CF%82.wikitext
@@ -1,1 +1,5 @@
-[[Greek]] for "[[messenger]]" or "[[angel]]"
+==Modern Greek==
+===Noun===
+
+#[[angel]]
+#[[messenger]] (''unconfirmed'')<!--can someone confirm this, please?  This is not in http://www.kypros.org/cgi-bin/lexicon -->
