fmt; please confirm "messenger" translation; +proper n; +gender & plural <άγγελος#65595>

--- a/wiki/%CE%AC%CE%B3%CE%B3%CE%B5%CE%BB%CE%BF%CF%82.wikitext
+++ b/wiki/%CE%AC%CE%B3%CE%B3%CE%B5%CE%BB%CE%BF%CF%82.wikitext
@@ -1,5 +1,11 @@
 ==Modern Greek==
 ===Noun===
+'''άγγελος''' ''m'' (''plural'' '''άγγελοι''')
 
 #[[angel]]
 #[[messenger]] (''unconfirmed'')<!--can someone confirm this, please?  This is not in http://www.kypros.org/cgi-bin/lexicon -->
+
+===Proper noun===
+'''Άγγελος'''
+
+#[[Angelo]]
