+gr: & es: <angelo#53209>

--- a/wiki/angelo.wikitext
+++ b/wiki/angelo.wikitext
@@ -4,6 +4,11 @@
 
 #A male [[given name]].
 
+====Translations====
+
+*Greek, Modern: [[Άγγελος]]
+*Spanish: [[Ángel]]
+
 ----
 ==Italian==
 ===Etymology===
