+plural, proper n, see also <ángel#38203>

--- a/wiki/%C3%A1ngel.wikitext
+++ b/wiki/%C3%A1ngel.wikitext
@@ -4,6 +4,14 @@
 *[[w:SAMPA|SAMPA]]: /"anxel/
 
 ===Noun===
-'''ángel''' ''m''
+'''ángel''' ''m'' (''plural'' '''ángeles''')
 
-# [[angel]]
+#[[angel]]
+
+===Proper noun===
+'''Ángel'''
+
+#[[Angelo]]
+
+===See also===
+*[[Los Ángeles]]
