--- a/wiki/daemon.wikitext
+++ b/wiki/daemon.wikitext
@@ -1,5 +1,7 @@
 ==English==
 ===Noun===
-#(''Commonwealth'') a [[demon]]
-#(''Greek mythology'') a [[deity]]
-#(''Computer science'') a program running as a background process, performing tasks such as serving files to remote clients.
+'''daemon''' (''plural'' '''daemons''')
+
+#(''Commonwealth English'') An older spelling of [[demon]].
+#(''Greek mythology'') A [[deity]].
+#(''computer science'') A [[program]] running as a [[background process]], performing tasks such as serving files to remote clients.
