--- a/wiki/%E6%BF%80.wikitext
+++ b/wiki/%E6%BF%80.wikitext
@@ -17,7 +17,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,15 +29,76 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': gik1
 
+===Compounds===
+*[[激昂]]
+*[[激昂慷慨]]
+*[[激变]]
+*[[激辩]]
+*[[激磁]]
+*[[激荡]]
+*[[激动]]
+*[[激发]]
+*[[激发态]]
+*[[激奋]]
+*[[激愤]]
+*[[激光]]
+*[[激光唱机]]
+*[[激光唱片]]
+*[[激光打印机]]
+*[[激光计算机]]
+*[[激光器]]
+*[[激光视盘]]
+*[[激光照排]]
+*[[激化]]
+*[[激活]]
+*[[激将]]
+*[[激将法]]
+*[[激进]]
+*[[激剧]]
+*[[激浪]]
+*[[激励]]
+*[[激烈]]
+*[[激灵]]
+*[[激流]]
+*[[激论]]
+*[[激酶]]
+*[[激恼]]
+*[[激怒]]
+*[[激切]]
+*[[激情]]
+*[[激素]]
+*[[激湍]]
+*[[激扬]]
+*[[激涌]]
+*[[激越]]
+*[[激增]]
+*[[激战]]
+*[[激浊扬清]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[げき]] (geki), [[けき]] (keki)
 ** '''[[Kun]]''': [[はげしい]] (hageshii), [[はげしく]] (hageshiku), [[はげます]] (hagemasu)
+
+===Compounds===
+*[[激減]]
+*[[激昂]]
+*[[激震]]
+*[[激甚]]
+*[[激戦]]
+*[[激痛]]
+*[[激怒]]
+*[[激闘]]
+*[[激動]]
+*[[激突]]
+*[[激雷]]
+*[[激励]]
+*[[激論]]
 
 * '''Other info''':  
 
