--- a/wiki/dingleberry.wikitext
+++ b/wiki/dingleberry.wikitext
@@ -1,1 +1,5 @@
-Poo that sticks to hair by one's bung-hole
+==English==
+===Noun===
+'''dingleberry''' (''plural'' '''dingleberries''')
+
+#(''slang'') A small piece of [[faeces]] attached to the hair around the [[anus]].
