--- a/wiki/G-d.wikitext
+++ b/wiki/G-d.wikitext
@@ -1,9 +1,11 @@
 ==English==
-
-===Proper Noun===
+===Proper noun===
 '''G-d'''
 
-# Deliberately incomplete spelling of the proper noun [[God]].
+#A deliberately incomplete spelling of the proper noun '''[[God]]'''.
 
-===Usage Note===
-This convention is used by those who believe that the divine name should never be destroyed.  It  prevents such destruction (whether accidental or deliberate) by never completely writing the name to begin with.  It may also advertise the writer's adherence to this belief, or acknowledge respect for the reader's beliefs in this regard.
+===Usage notes===
+*'''G-d''' is used by those who believe that writing God's name in full destroys its divinity, or to advertise the writer's adherence to this belief, or to acknowledge respect for the reader's beliefs in this regard.
+
+===See also===
+*[[YHWH]]
