--- a/wiki/%E6%93%97.wikitext
+++ b/wiki/%E6%93%97.wikitext
@@ -49,7 +49,7 @@
 * '''Romanizations'''
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': byeok
 ** '''[[McCune-Reischauer]]''': pyŏk
-** '''[[Yale]]''': peyk
+** '''[[Yale]]''': peykaa
 
 ----
 
