fmt; trimmed etym; deleted enc info <Oklahoma#65627>

--- a/wiki/Oklahoma.wikitext
+++ b/wiki/Oklahoma.wikitext
@@ -1,14 +1,12 @@
 ==English==
-
 ===Etymology===
-
-Comes from the [[Choctaw]] people.  "Okla" roughly means "the people" and "homa" means "red".
+From [[Choctaw]] ''okla'', the people, + ''homa'', red
 
 ===Proper noun===
+'''Oklahoma'''
 
-# A [[southwest]] [[state]] of the [[United States]].  Was admitted into the [[Union]] on November 16, 1907 as the the 46th state of the United States.
+#A [[state]] of the [[United States]].
 # A [[county]] in the state of Oklahoma.
 
 ====See also====
-
-*[[Wikipedia]] article on [[w:Oklahoma|Oklahoma]]
+*[[w:Oklahoma|Wikipedia article on Oklahoma]]
