--- a/wiki/placing.wikitext
+++ b/wiki/placing.wikitext
@@ -1,4 +1,5 @@
 ==English==
-===Verb===
+===Verb form===
 '''placing'''
-present participle of [[place]]
+
+#[[Present participle]] of '''to [[place]]'''.
