--- a/wiki/placing.wikitext
+++ b/wiki/placing.wikitext
@@ -3,3 +3,8 @@
 '''placing'''
 
 #[[Present participle]] of '''to [[place]]'''.
+
+===Noun===
+'''placing'''
+
+#The action of the verb '''to place'''.
