--- a/wiki/Old_Testament.wikitext
+++ b/wiki/Old_Testament.wikitext
@@ -2,6 +2,9 @@
 ===Proper Noun===
 # The first major part of the Christian Bible, covering events before the coming of Christ, corresponding roughly to the Jewish [[Tanakh]].  Usually subdivided into the categories of law, history, poetry (or wisdom books) and prophecy. 
 
+====Translations====
+*{{fi}}: [[Vanha Testamentti]]
+
 ===See Also===
 *[[Hebrew Scriptures]]
 *[[Tanakh]]
