fmt; also past p; +conj, with syns <provided#65581>

--- a/wiki/provided.wikitext
+++ b/wiki/provided.wikitext
@@ -1,4 +1,14 @@
 ==English==
-===Verb===
+===Verb form===
 '''provided'''
-past tense of  [[provide]]
+
+#Past tense and [[past participle]] of '''to [[provide]]'''.
+
+===Conjunction===
+'''provided''' (''also'' '''provided that''')
+
+#Only if (the [[stipulation]] that follows is true).
+#:''You can go to the party provided you finish all your homework first.''
+
+====Synonyms====
+*[[on condition that]], [[only if]], provided that, [[providing]]
