+pp and adj, with fr: & it: <interested#65580>

--- a/wiki/interested.wikitext
+++ b/wiki/interested.wikitext
@@ -1,4 +1,16 @@
 ==English==
-===Verb===
+===Verb form===
 '''interested'''
-past tense of  [[interest]]
+
+#Past tense and [[past participle]] of '''to [[interest]]'''.
+
+===Adjective===
+'''interested''' (''[[comparative]]'' '''more interested''', ''[[superlative]]'' '''most interested''')
+
+#Having or showing [[interest]].
+#:''I'm very interested in going to see that play.''
+
+====Translations====
+
+*French: [[intéressé]] ''m'', intéressée ''f''
+*Italian: [[interessato]] ''m'', interessata ''f''
