+usage note <ones#65578>

--- a/wiki/ones.wikitext
+++ b/wiki/ones.wikitext
@@ -1,4 +1,8 @@
 ==English==
 ===Noun===
-'''ones'''
-plural of [[one]]
+'''ones''' ''plural''
+
+#Plural of [[one]].
+
+====Usage note====
+*'''Ones''' is not the pronoun: the pronoun is spelled [[one's]].
