fmt; cleaned up; modified def; typo; syns; see also; fr:, it: <surprised#65576>

--- a/wiki/surprised.wikitext
+++ b/wiki/surprised.wikitext
@@ -1,6 +1,21 @@
 ==English==
-===Adjective===
+===Verb form===
 '''surprised'''
-# expierencing something unexpected causing feelings of astonishment and wonder 
 
-See also [[surprise]]
+#Past tense and [[past participle]] of '''to [[surprise]]'''.
+
+===Adjective===
+'''surprised''' (''[[comparative]]'' '''more surprised''', ''[[superlative]]'' '''most surprised''')
+
+#Experiencing the pleasant feelings caused by something good that was unexpected.
+
+====Translations====
+
+*French: [[surpris]] ''m'', surprise ''f''
+*Italian: [[sorpreso]] ''m'', sorpresa ''f''
+
+====Synonyms====
+*[[astonished]]
+
+===See also===
+*[[shocked]]
