fmt; +n & adj <speaking#65571>

--- a/wiki/speaking.wikitext
+++ b/wiki/speaking.wikitext
@@ -1,4 +1,16 @@
 ==English==
-===Verb===
+===Verb form===
 '''speaking'''
-present participle of [[speak]]
+
+#[[Present participle]] of '''to [[speak]]'''.
+
+===Noun===
+'''speaking''' (''[[uncountable]]'')
+
+#The action of the verb '''to speak'''.
+
+===Adjective===
+'''speaking''' (''no [[comparative]] or [[superlative]]; used only before the noun'')
+
+#Used in speaking.
+#:''one's normal speaking voice''
