fmt; n defs, with syns <talks#65570>

--- a/wiki/talks.wikitext
+++ b/wiki/talks.wikitext
@@ -1,7 +1,34 @@
 ==English==
 ===Verb===
 '''talks'''
-3rd person singular form of [[talk]]
+
+#[[Third-person]] singular present tense of '''to [[talk]]'''.
+
 ===Noun===
-'''talks'''
-plural form of [[talk]]
+'''talks''' ''plural''
+
+#Plural of '''talk'''.
+#Meetings to discuss a particular matter.
+#:''The leaders of the G8 nations are currently in talks over nuclear weapons.''
+
+====Synonyms====
+*(''discussion''): [[conference]], [[debate]], [[discussion]], [[meeting]]s
+
+====Translations====
+
+'''plural of "talk"'''
+''See'' [[talk]]
+
+'''meetings'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
