--- a/wiki/Mongolian.wikitext
+++ b/wiki/Mongolian.wikitext
@@ -9,7 +9,7 @@ Originally from ''[[Mongol]]'' + ''[[-ian]]'', a translation of the [[German]] '
 #: '''Quotations'''
 #:* '''1706''' - Evert Y. Ides: ''Three years travels from Moscow over-land to China''...
 <!--Done originally by a Chinese author, with additions by the above author. Originally printed in German, and translated to English by the same author.-->
-#:*: He had a Sister, which according to the Mongalian custom lived in the devoted spiritual state.
+#:*: He had a Sister, which according to the Mongolian custom lived in the devoted spiritual state.
 #:* '''1878''' - ''Encyclopedia Britannica'', ninth edition, volume XVI
 #:*: The Mongolian characters...are written perpendicularly from above downward.
 #:* '''1985''' - Robert Whelan: ''Robert Capa: A Biography''
@@ -41,7 +41,7 @@ Originally from ''[[Mongol]]'' + ''[[-ian]]'', a translation of the [[German]] '
 *Spanish: [[mongol]]
 
 ===Noun===
-'''Mongolian'''
+'''Mongolian''' (''plural'' '''Mongolians''')
 
 #A [[native]] or [[inhabitant]] of [[Mongolia]] = [[Mongol]].
 #: '''Quotations'''
@@ -61,7 +61,7 @@ Originally from ''[[Mongol]]'' + ''[[-ian]]'', a translation of the [[German]] '
 #:*: The Altaic family...comprises about 40 languages, classified into three groups: Turkic, Mongolian, and Manchu-Tungus.
 #:* '''1990''' - ''Orientations'', April
 #:*: These inscriptions are in Mongolian and thus widen the appliqu&eacute;'s international connections.
-#A person of [[Mongoloid]] physical type = [[Mongoloid]].
+#A person of Mongoloid physical type; a [[Mongoloid]].
 #:* '''1823''' - ''North American Revolution'', July
 #:*: A particular individual which the latter considered a Mongolian and the former assures us is an Ethiopian.
 #:* '''1938''' - Franz Boas, et al.: ''General Anthropology''
@@ -69,7 +69,7 @@ Originally from ''[[Mongol]]'' + ''[[-ian]]'', a translation of the [[German]] '
 #:* '''1988''' - ''Current Anthropology'', volume 29
 #:*: The thesis of this work was that native Americans were one race distinct from Eskimos and Mongolians.
 
-===Translations===
+====Translations====
 *Bulgarian: [[монголец]] ''m'', [[монголка]] ''f'', [[Монголски]]
 *Chinese: [[蒙古人]], [[蒙古语]]
 *Estonian: [[mongol]] (sense 3), [[mongoollane]] (sense 1), [[mongoli keel]] 
@@ -118,21 +118,21 @@ Originally from ''[[Mongol]]'' + ''[[-ian]]'', a translation of the [[German]] '
 *Vietnamese: [[Tiếng Mông-cổ]]
 *Walloon: [[Mongol]]
 
-==Related terms==
+===Related terms===
 *[[Mongol]]
 *[[Mongolia]]
 *[[Mongoloid]]
 
-==Derived terms==
+===Derived terms===
 *[[Mongolian gerbil]]
 *[[Mongolian lamb]]
 *[[Mongolian pheasant]]
 *[[Mongolian spot]]
 
-==More information==
+===See also===
 *[[w:Mongol|Wikipedia article on Mongolians (Mongols)]]
 *[[w:Mongolian language|Wikipedia article on the Mongolian language]]
 
-==External links==
+===External links===
 *[http://www.websters-online-dictionary.org/definition/Mongolian-english/ Mongolian-English Dictionary]
 [[nl:Mongolian]]
