fmt; corrected pronunciation <hepatic#65637>

--- a/wiki/hepatic.wikitext
+++ b/wiki/hepatic.wikitext
@@ -1,11 +1,18 @@
-he·pat·ic   Pronunciation Key  (h-ptk)
+==English==
+===Pronunciation===
+*[[IPA]]: /hɛˈpætɪk/
+*[[SAMPA]]: /hE"p{tIk/
 
-adj.
+===Hyphenation===
+he·pat·ic
 
-   1. Concerning or related to the liver.
-   2. Acting on or occurring in the liver.
+===Adjective===
+'''hepatic''' (''no [[comparative]] or [[superlative]]'')
 
+#Of or relating to the [[liver]].
+#Acting on or occurring in the liver.
 
-n.
+===Noun===
+'''hepatic''' (''plural'' '''hepatics''')
 
-    A compound that acts on the liver.
+#Any [[compound]] that acts on the liver.
