/* Related terms */ <capacitor#43537>

--- a/wiki/capacitor.wikitext
+++ b/wiki/capacitor.wikitext
@@ -8,6 +8,17 @@
 *[[capacity]]
 *[[variable capacitor]]
 
+----
+
+----
+
+----
+
+== Headline text ==
+vxydvasdfads
+== Headline text ==
+[[Image:Example.jpg]]sdfa[[Media:Example.mp3]]''Italic text''hlal lakd''Italic text''
+
 ====Translations====
 *Dutch: [[condensator]] ''m'', [[capaciteit]] ''f''
 *Finnish: [[kondensaattori]]
