/* Translations */ added japanese! <where is the toilet#36351>

--- a/wiki/where_is_the_toilet.wikitext
+++ b/wiki/where_is_the_toilet.wikitext
@@ -13,6 +13,7 @@
 *Scottish: [[Càit a bheil an taigh beag?]]
 *{{he}}: [[איפה השרוטים]] (eifo ha sherotim)
 *{{it}}: [[Dove sono i gabinetti?]]
+*{{ja}}: [[トイレはどこですか。]] (toire wa doko des' ka?)
 *{{ru}}: [[Где туалет?]] (g'dye tualyet)
 *{{sk}}: [[Kde je WC?]], [[Kde je záchod?]]
 *{{es}}: [[¿Dónde está el baño?]]
