--- a/wiki/%E5%92%8C%E8%A3%BD%E8%8B%B1%E8%AA%9E.wikitext
+++ b/wiki/%E5%92%8C%E8%A3%BD%E8%8B%B1%E8%AA%9E.wikitext
@@ -1,14 +1,62 @@
 '''''Wasei-eigo''''' (&#21644;&#35069;&#33521;&#35486; ''wasei eigo'', lit. "Made-in-Japan English") refers to [[English language|English]] constructions not in use in [[Anglophone]] countries nor by Anglophones, but only by speakers of [[Japanese language|Japanese]].
 A more general term for made-in-Japan foreign words is ''wasei-[[gairaigo]]'', which usually apply to words made from European languages.
 
-One example is the word ''desk'' (&#12487;&#12473;&#12463;: ''desuku''). It seems like perfectly good English, but in Japan, it is a title for a person. ''Tanaka-desk'' would be a reporter or editor in charge of a department at a newspaper (for example, the city desk). Similarly, ''mansion'' ([[:ja:&#12510;&#12531;&#12471;&#12519;&#12531;]]: ''manshon'') refers not to a mansion, but an apartment. Wasei-eigo words can form compounds with Japanese words, for example, ''okushon'' (&#20740;&#12471;&#12519;&#12531;) combines ''oku'', meaning hundred million, with "mansion" to form a new word meaning "luxury apartment". Sometimes, two English words with their normal meanings will be combined to form a new compound word. One famous instance is ''famicom'' (&#12501;&#12449;&#12511;&#12467;&#12531;: ''famikon'' or [[:ja:&#12501;&#12449;&#12511;&#12522;&#12540;&#12467;&#12531;&#12500;&#12517;&#12540;&#12479;]]: ''family computer''), a [[portmanteau]] of "family" and "computer", meaning a [[video game]] system (especially, but not necessarily, ''the'' [[Famicom]], known to the rest of the world as the [[Nintendo Entertainment System]]).
+One example is the word ''desk'' (&#12487;&#12473;&#12463;: ''desuku''). It seems like perfectly good English, but in Japan, it is a title for a person. ''Tanaka-desk'' would be a reporter or editor in charge of a department at a newspaper (for example, the city desk). Similarly, ''mansion'' ([[:ja:&#12510;&#12531;&#12471;&#12519;&#12531;]]: ''manshon'') refers not to a mansion, but an apartment. Wasei-eigo words can form compounds with Japanese words, for example, ''okushon'' (&#20740;&#12471;&#12519;&#12531;) combines ''oku'', meaning hundred million, with "mansion" to form a new word meaning "luxury apartment". Sometimes, two English words with their normal meanings will be combined to form a new compound word. One famous instance is ''famicom'' (&#12501;&#12449;&#12511;&#12467;&#12531;: ''famikon'' or [[:ja:&#12501;&#12449;&#12511;&#12522;&#12540;&#12467;&#12531;&#12500;&#12517;&#12540;&#12479;]]: ''family computer''), a [[portmanteau]] of "family" and "computer", meaning a [[video game]] system (especially, but not necessarily, ''the'' [[Famicom]], known to the rest of the world as the [[Nintendo Entertainment System]]). Sometimes the resulting words make as much, or more, sense than their standard English equivalents. (see: fried potato or recycle shop below, in examples.)
 
-{{stub}}
+
 <!-- Todo:
 Examples (e.g. paper-driver)
+
+** i added some examples from the japanese wikipedia, plus romanji and stuff! woohoo! 
+
 discussion of wasei-eigo terms as perceived by Japanese
 distinction vs. [[Engrish]]
 -->
+==Examples==
+{| border="2"
+| '''Japanese word:''' ([[Katakana]] & [[romanji]]:) 
+| '''Lit. Translation & Common English meaning:'''
+|- 
+| &#12486;&#12524;&#12499;&#12466;&#12540;&#12512; (terebige-mu)  
+| tv game / video game
+|- 
+| &#12514;&#12540;&#12491;&#12531;&#12464;&#12467;&#12540;&#12523; (mo-ninguko-ru) 
+| morning call / wake-up call
+|- 
+| &#12496;&#12483;&#12463;&#12511;&#12521;&#12540; (bakkumira-) 
+| back mirror / rearview mirror
+|- 
+| &#12501;&#12522;&#12540;&#12480;&#12452;&#12516;&#12523; (furi-daiyaru) 
+| free dial / toll free call
+|- 
+| &#12488;&#12521;&#12531;&#12503; (turanpu) 
+| trumps / playing cards
+|- 
+| &#12497;&#12531;&#12463; (panku)
+| puncture / flat tire
+|- 
+| &#12473;&#12510;&#12540;&#12488; (suma-to)
+| smart / slim 
+|- 
+| &#12471;&#12540;&#12523; (shi-ru) 
+| seal / sticker
+|- 
+| &#12472;&#12455;&#12483;&#12488;&#12467;&#12540;&#12473;&#12479;&#12540; (jettoko-suta-) 
+| jet coaster / roller coaster
+|- 
+| &#12496;&#12540;&#12472;&#12519;&#12531;&#12450;&#12483;&#12503; (ba-jyonappu)
+| version up / upgrade (software) 
+|- 
+| &#12501;&#12521;&#12452;&#12489;&#12509;&#12486;&#12488; (furaidopoteto) 
+| fried potato / USA: french fries UK: chips
+|- 
+| &#12507;&#12483;&#12481;&#12461;&#12473; (hocchikisu)
+| Hotchkiss / Stapler
+|- 
+| &#12522;&#12469;&#12452;&#12463;&#12523;&#12471;&#12519;&#12483;&#12503; (risaikurusyoppu) 
+| recycle shop / secondhand shop (used clothes)  
+|}
+
 ==See also==
 * [[Engrish]]
 
@@ -16,5 +64,5 @@ distinction vs. [[Engrish]]
 *[http://www.csse.monash.edu.au/~jwb/afaq/wasei-eigo.html Examples]
 
 [[ja:&#21644;&#35069;&#33521;&#35486;]]
-
+{{stub}}
 [[Category:Japanese terms]][[Category:Japanese language]]
