--- a/wiki/combatant.wikitext
+++ b/wiki/combatant.wikitext
@@ -6,4 +6,4 @@
 
 an armed fighter 
   
-''Gladiators were combatants who fought to their death to entertain the public.''
+''Gladiators were combatants who fought to the death to entertain the public.''
