--- a/wiki/todger.wikitext
+++ b/wiki/todger.wikitext
@@ -5,5 +5,5 @@
 
 # Colloquial name for a human penis (used in Australia, thought to be used in UK)
 
-===WikiSaurus Entry===
-See [[WikiSaurus:Penis]]
+===See also WikiSaurus pages==
+[[WikiSaurus:Penis|Penis]]
