i think this is better than a redirect <cherubim#65598>

--- a/wiki/cherubim.wikitext
+++ b/wiki/cherubim.wikitext
@@ -1,1 +1,14 @@
-Plural of [[cherub]].
+==English==
+===Etymology===
+Hebrew [[כרוב]], [[cherub]] + &rlm;[[-ים]]&lrm;, masculine plural suffix
+
+===Noun===
+'''cherubim''' ''pl''
+
+# Traditional plural of [[cherub]].
+
+====Translations====
+*Hebrew: [[כרבים|כְּרֻבִים]] ''m pl''
+
+===See also===
+*[[cherubs]] (''modern plural'')
