provide information hidden by just redirecting <cherubs#65597>

--- a/wiki/cherubs.wikitext
+++ b/wiki/cherubs.wikitext
@@ -1,1 +1,14 @@
-Plural of [[cherub]].
+==English==
+===Etymology===
+Hebrew [[כרוב]], [[cherub]] + English [[-s]], plural suffix
+
+===Noun===
+'''cherubs''' ''pl''
+
+# Modern plural of [[cherub]].
+
+====Translations====
+*Hebrew: [[כרבים|כְּרֻבִים]] ''m pl''
+
+===See also===
+*[[cherubim]] (''traditional plural'')
