It is a particular Male Sexual Organ <penis#8155>

--- a/wiki/penis.wikitext
+++ b/wiki/penis.wikitext
@@ -8,7 +8,7 @@ From Latin '''penis''', ''[[tail]]'' or ''penis''
 ===Noun===
 '''penis''', plural '''[[penises]]''' or '''[[penes]]'''
 
-# Male [[sexual]] [[organ]].
+# The male [[sexual]] [[organ]] for [[copulation]].
 #:''The male penis and the female clitoris are analogous organs.''
 
 ===Synonyms===
