Bear with me as I introduce the experiment of a WikiSaurus <penis#8155>

--- a/wiki/penis.wikitext
+++ b/wiki/penis.wikitext
@@ -53,6 +53,8 @@ From Latin '''penis''', ''[[tail]]'' or ''penis''
 *[[willy]] (''slang'')
 *[[yingyang]] (''slang'')
 
+See also [[WikiSaurus:penis]]
+
 ==== Translations ====
 *[[Breton]]: [[kalc'h]] ''m'' -ioù ''pl'', [[pich]] ''m'' -où ''pl''
 *[[Catalan]]: penis ''m''
