--- a/wiki/dick.wikitext
+++ b/wiki/dick.wikitext
@@ -16,7 +16,7 @@
 ===Noun===
 '''dick'''
 
-#(slang, vulgar) [[penis]].
+#(slang, vulgar) [[penis]]. see also [[WikiSaurus:penis]]
 #(''old'') [[detective]].
 
 ====Translations====
