--- a/wiki/%E2%99%82.wikitext
+++ b/wiki/%E2%99%82.wikitext
@@ -4,5 +4,5 @@
 
 #The symbol for [[male]].
 #The symbol for [[Mars]].
-===Related Symbols===
+===See also===
 *[[☿]] [[♀]] [[♁]] [[☾]] [[♃]] [[♄]] [[♅]] [[♆]] [[♇]]
