/* Related Symbols */ -> See also <♀#53577>

--- a/wiki/%E2%99%80.wikitext
+++ b/wiki/%E2%99%80.wikitext
@@ -4,5 +4,5 @@
 
 #The symbol for [[female]].
 #The symbol for [[Venus]].
-===Related Symbols===
+===See also===
 *[[☿]] [[♁]] [[♂]] [[♃]] [[♄]] [[♅]] [[♆]] [[♇]]
