Another example of WikiSaurus - and a sorely needed one! <sexual intercourse#36476>

--- a/wiki/sexual_intercourse.wikitext
+++ b/wiki/sexual_intercourse.wikitext
@@ -1,7 +1,8 @@
 ===Noun===
 '''sexual intercourse'''
 
-# 
+==Synonyms==
+see [[WikiSaurus:sexual intercourse]]
 
 ====Translations====
 *[[Breton]]: [[darempredoù rev]] ''m pl''
