--- a/wiki/%E5%BC%93.wikitext
+++ b/wiki/%E5%BC%93.wikitext
@@ -18,7 +18,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,11 +30,21 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': gung1
 
+===Compounds===
+*[[弓背]]
+*[[弓箭]]
+*[[弓弩]]
+*[[弓身]]
+*[[弓弦]], [[弓弦儿]]
+*[[弓形]]
+*[[弓腰]]
+*[[弓子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[きゅう]] (kyū)
