--- a/wiki/male.wikitext
+++ b/wiki/male.wikitext
@@ -19,7 +19,7 @@ Middle English [[male]], borrowed from Old French [[masle]], [[malle]] (Modern F
 #referring to the [[masculine]] [[gender]]
 #''(figurative)'' having an external [[plug]]
 
-====Antonym====
+====Antonyms====
 *[[female]]
 *[[neuter]]
 
@@ -71,13 +71,11 @@ Middle English [[male]], borrowed from Old French [[masle]], [[malle]] (Modern F
 *Spanish: [[macho]] ''m''
 *[[Tupinambá]]: [[akûãîba'e]] (t-)
 
-===Related terms===
+===See also===
 *[[macho]]
 *[[masculine]]
+*[[♂]]
 
-----
-
-==English==
 ===Etymology===
 Dhivehi [[މާލެ]] (māle), of uncertain etymology.
 
@@ -86,6 +84,7 @@ Dhivehi [[މާލެ]] (māle), of uncertain etymology.
 
 ===Proper noun===
 '''Male'''
+
 #capital of the [[Maldives]]
 
 ====Translations====
