--- a/wiki/flaky.wikitext
+++ b/wiki/flaky.wikitext
@@ -4,4 +4,4 @@
 
 '''flaky'''
 
-#Consisting of flakes or of small, loose masses; lying, or [[Cleaving cleaving]] off, in flakes or layers; flakelike.
+#Consisting of flakes or of small, loose masses; lying, or [[cleaving]] off, in flakes or layers; flakelike.
