--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -18,7 +18,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--left column-->
-*Arabic: [[دودة|دُودَة]] (dúda) ''sg'', [[دود|دُودٌ]] (dúdun) ''pl''
+*Arabic: [[دودة|دُودَة]] (dúːda) ''sg'', [[دود|دُودٌ]] (duːd) ''pl'', [[ديدان|دِيدَان]] (diːdáːn) ''pl''
 *[[Bosnian]]: [[crv]] ''m''
 *Bulgarian: [[червей]] (červej)
 *Catalan: [[cuc]] ''m''
@@ -38,7 +38,7 @@
 <!--right column-->
 *Indonesian: [[cacing]]
 *Italian: [[verme]] ''m''
-*Japanese: [[虫]] ([[むし]], mushí)
+*Japanese: [[虫]] ([[むし]], mushí), [[虫螻]] ([[むしけら]], mushikera)
 *Korean: [[벌레]] (peolre)
 *Latin: [[vermis]] ''m''
 *Lithuanian: [[kirmėlė]] ''f''; [[kirminas]] ''m'' (also means insect larvae)
@@ -60,6 +60,7 @@
 *Arabic: [[شخص دنيء|شَخْصٌ دَنِيء]] (šáχʂun dániʔ) ''m''
 *Bulgarian: [[негодник]] (negodnik) ''m'', [[жалко същество]] (žalko säštestvo) ''n''
 *Czech: [[ubožák]] ''m''
+*Hebrew: [[נבזה]] (nivzeh) ''m''
 *German: [[elender]] ''m'', [[elendes Wurm]]  ''n''
 *Italian: [[miserabile]] ''m and f''
 *Korean: [[비열한 인간]] (piyeolhan ingan)
