rearrange sections <female#4597>

--- a/wiki/female.wikitext
+++ b/wiki/female.wikitext
@@ -1,9 +1,14 @@
+==English==
 ===Adjective===
 '''female''' (no comparative or superlative form)
-Symbol for female: [[♀]]
+
 # Belonging to the [[feminine]] [[gender]]
 # Referring to the [[feminine]] [[gender]]
 #''(Figurative, electronics, etc.)'' having an internal plug or outlet
+
+====Antonyms====
+*[[male]]
+*[[neuter]]
 
 ====Translations====
 *Arabic: [[أنثى]]
@@ -30,10 +35,6 @@ Symbol for female: [[♀]]
 *Russian: [[женский]]
 *Spanish: [[femenino]] ''m'', [[feminina]] ''f''
 *[[Tupinambá]]: [[kunhã]]
-
-====Antonyms====
-*[[male]]
-*[[neuter]]
 
 ===Noun===
 '''female''', plural '''[[females]]'''
@@ -65,3 +66,6 @@ Symbol for female: [[♀]]
 *Slovene: [[ženska]] ''f'', [[samica]] ''f'' (with animals)
 *Spanish: [[hembra]] ''f''
 *[[Tupinambá]]: [[kunhã]]
+
+===See also===
+*[[♀]] (Symbol for female)
