mods to vt def <roger#59234>

--- a/wiki/roger.wikitext
+++ b/wiki/roger.wikitext
@@ -5,6 +5,6 @@
 #A male [[given name]].
 
 ===Transitive verb===
-'''to roger''' (rogering, rogered)
+'''to roger''' ('''rogering''', '''rogered''', '''rogered''')
 
-#(''coarse slang'') To have [[sexual intercourse]] with.
+#(''coarse slang'') Of a man, to have [[sexual intercourse]] with (someone), especially in a rough manner.
