--- a/wiki/%E2%99%81.wikitext
+++ b/wiki/%E2%99%81.wikitext
@@ -1,12 +1,11 @@
 ==Translingual==
 ===Symbol===
-♁
+'''♁'''
 
-#The symbol for the [[Earth]].
+#A symbol for the [[Earth]].
 
+====Synonyms====
+*[[⊕]]
 
-Also used is [[⊕]]
-
-
-===Related Symbols===
+===See also===
 *[[☿]] [[♀]] [[♂]] [[☾]] [[♃]] [[♄]] [[♅]] [[♆]] [[♇]]
