attempt to separate english and latin entries - please check! <Venus#38599>

--- a/wiki/Venus.wikitext
+++ b/wiki/Venus.wikitext
@@ -1,26 +1,39 @@
-==[[Latin]]==
+==English==
+===Proper noun===
+'''Venus'''
+
+# Roman [[goddess]] of natural productivity
+# the second planet in our [[solar system]]
+
+==== Derived terms ====
+*[[venusian]]<!-- capitalisation? -->
+
+==== Translations ====
+*Estonian: [[Veenus]]
+*Finnish: Venus (2)
+*German: Venus ''f''
+*Lithuanian: [[Venera]] ''f''
+*{{ms}}: [[Zuhrah]] (2)
+*{{pl}}: [[Wenus]] ''f'' (1,2)
+*[[Romanica]]: Venus ''f''
+*Slovak: [[Venuša]] ''f''
+*Slovene: [[Venera]] ''f'' (1, 2)
+*Swedish: Venus
+*Welsh: [[Gwener]] ''f''
+
+=== See also ===
+*[[Aphrodite]]
+*[[♀]]
+*[[Wiktionary_Appendix:Planets|Appendix on Planets]]
+
+----
+
+==Latin==
 ===Proper noun===
 '''Venus''' ''f'' (Plural: [[Veneres]])
 
 # Roman [[goddess]] of natural productivity
 # the second planet in our [[solar system]]
 
-==== Translations ====
-*Estonian: [[Veenus]]
-*Finnish: [[Venus]] (2)
-*German: [[Venus]] ''f''
-*Lithuanian: [[Venera]] ''f''
-*{{ms}}: [[Zuhrah]] (2)
-*{{pl}}: [[Wenus]] ''f'' (1,2)
-*[[Romanica]]: [[Venus]] ''f''
-*Slovak: [[Venuša]] ''f''
-*Slovene: [[Venera]] ''f'' (1, 2)
-*Swedish: Venus
-*Welsh: [[Gwener]] ''f''
-
-=== See Also ===
-* [[Aphrodite]]
-*[[Wiktionary_Appendix:Planets|Appendix on Planets]]
-
-====Derived words====
-: [[venero]]
+====Derived terms====
+:[[venero]]
