--- a/wiki/%E2%98%BF.wikitext
+++ b/wiki/%E2%98%BF.wikitext
@@ -1,10 +1,8 @@
 ==Translingual==
 ===Symbol===
-☿
+'''☿'''
 
-#The symbol for [[Mercury]].
+#The symbol for [[Mercury]].<!-- god, planet, metal?? -->
 
-
-
-===Related Symbols===
+===See also===
 *[[♀]] [[♁]] [[☾]] [[♂]] [[♃]] [[♄]] [[♅]] [[♆]] [[♇]]
