--- a/wiki/mars.wikitext
+++ b/wiki/mars.wikitext
@@ -20,12 +20,15 @@ Latin ''[[Mars]]'', from older Latin '''[[Mavors]]'''.  The candy bar is named a
 # Roman god of war
 # a brand of chocolate bar
 
+====Derived terms====
+*[[Martian]]<!-- should this be capitalised? -->
+
 ====Translations====
 *Chinese: [[火星]] (hǔoxīng, 1)
 *Dutch: Mars ''f'' (1, 2, 3)
 *[[Esperanto]]: [[Marso]] (1, 2)
 *Estonian: [[Marss]]
-*Finnish: [[Mars]] (1)
+*Finnish: Mars (1)
 *French: Mars ''m'' (1, 2, 3)
 *German: Mars ''m'' (1, 2, 3)
 *Greek, Modern: [[Άρης]] ([[Ares]]), [[Aris]] (1, 2)
@@ -40,12 +43,13 @@ Latin ''[[Mars]]'', from older Latin '''[[Mavors]]'''.  The candy bar is named a
 *[[Romanica]]: [[Marte]] (1, 2)
 *Russian: [[Марс]] ''m'' (Mars) (1, 2,)
 *Slovak: Mars ''m'' (1, 2)
-*Slovene: [[Mars]] ''m'' (1, 2)
+*Slovene: Mars ''m'' (1, 2)
 *Spanish: [[Marte]] (1, 2)
 *Swedish: Mars
 *Welsh: [[Mawrth]] ''m''
 
 ==== See also ====
+*[[♂]]
 *[[Wiktionary_Appendix:Planets|Appendix on Planets]]
 *[[w:Mars|Mars]] — Wikipedia: a list of Wikipedia articles about things named "Mars"
 
