--- a/wiki/%E2%98%BE.wikitext
+++ b/wiki/%E2%98%BE.wikitext
@@ -1,8 +1,8 @@
 ==Translingual==
 ===Symbol===
-☾
+'''☾'''
 
 #The symbol for the [[moon]].
 
-===Related Symbols===
+===See also===
 *[[☿]] [[♀]] [[♁]] [[♂]] [[♃]] [[♄]] [[♅]] [[♆]] [[♇]]
