Symbol for the god or the planet or both?  Not for the metal, as capitalised, and the symbol is Hg as we know <☿#65622>

--- a/wiki/%E2%98%BF.wikitext
+++ b/wiki/%E2%98%BF.wikitext
@@ -2,7 +2,7 @@
 ===Symbol===
 '''☿'''
 
-#The symbol for [[Mercury]].<!-- god, planet, metal?? -->
+#The symbol for [[Mercury]].<!-- god, planet, or both?  Definitely not the element, as Mercury is capitalised here-->
 
 ===See also===
 *[[♀]] [[♁]] [[☾]] [[♂]] [[♃]] [[♄]] [[♅]] [[♆]] [[♇]]
