--- a/wiki/%E9%A5%A2.wikitext
+++ b/wiki/%E9%A5%A2.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': bread (Persian 'naan')
+* '''Common Meaning''': [[bread]] (Persian [[naan]])
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
