PArt of experiment of WikiSaurus <roger#59234>

--- a/wiki/roger.wikitext
+++ b/wiki/roger.wikitext
@@ -7,4 +7,4 @@
 ===Transitive verb===
 '''to roger''' ('''rogering''', '''rogered''', '''rogered''')
 
-#(''coarse slang'') Of a man, to have [[sexual intercourse]] with (someone), especially in a rough manner.
+#(''coarse slang'') Of a man, to have [[sexual intercourse]] with (someone), especially in a rough manner. See also [WikiSaurus:sexual intercourse]
