--- a/wiki/%E5%8D%97.wikitext
+++ b/wiki/%E5%8D%97.wikitext
@@ -26,7 +26,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -38,11 +38,49 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': naam4
 
+===Compounds===
+*[[南半球]]
+*[[南北]]
+*[[南边]]
+*[[南部]]
+*[[南豆腐]]
+*[[南方]]
+*[[南非]]
+*[[南宫]]
+*[[南瓜]]
+*[[南国]]
+*[[南寒带]]
+*[[南胡]]
+*[[南回归线]]
+*[[南货]]
+*[[南极]]
+*[[南极光]]
+*[[南极圈]]
+*[[南柯一梦]]
+*[[南面]], [[南面儿]]
+*[[南南合作]]
+*[[南欧]]
+*[[南腔北调]]
+*[[南曲]]
+*[[南式]]
+*[[南斯拉夫]]
+*[[南天极]]
+*[[南甜北咸]]
+*[[南纬]]
+*[[南味]]
+*[[南温带]]
+*[[南戏]]
+*[[南下]]
+*[[南亚]]
+*[[南洋]]
+*[[南辕北辙]]
+*[[南竹]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[なん]] (nan), [[な]] (na), [[だん]] (dan)
