/* Pronunciation */ typewriter font for sampa <cwm#19015>

--- a/wiki/cwm.wikitext
+++ b/wiki/cwm.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Pronunciation===
 *[[IPA]]: /kuːm/
-*[[SAMPA]]: /ku:m/
+*[[SAMPA]]: /<tt>ku:m</tt>/
 *[[AHD]]: /ko͞om/
 
 ===Etymology===
