--- a/wiki/%E8%9C%A1.wikitext
+++ b/wiki/%E8%9C%A1.wikitext
@@ -13,20 +13,20 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#wax
-*# candle
-*# waxy, glazed
-*# maggot
+*# [[wax]]
+*# [[candle]]
+*# [[waxy]], [[glazed]]
+*# [[maggot]]
 *# as a non-simplified form sometimes used as an equivalent to U+410D ([[䄍]]), meaning imperial harvest
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': zhà (zha4)
+*** '''[[Pinyin]]''': là (la4), zhà (zha4)
 *** '''[[Wade-Giles]]''': cha<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -37,11 +37,29 @@
 * '''Style''': Both [[Simplified Chinese|Simplified]] and [[Traditional Chinese]]
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[蠟]]
 
+===Compounds===
+*[[蜡白]]
+*[[蜡版]]
+*[[蜡笔]]
+*[[蜡虫]]
+*[[蜡花]], [[蜡花儿]]
+*[[蜡黄]]
+*[[蜡炬]]
+*[[蜡泪]]
+*[[蜡染]]
+*[[蜡人]], [[蜡人儿]]
+*[[蜡台]]
+*[[蜡丸]], [[蜡丸儿]]
+*[[蜡纸]]
+*[[蜡珠]]
+*[[蜡烛]]
+*[[蜡嘴]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しょ]] (sho), [[わ]] (wa), [[じゃ]] (ja), [[せき]] (seki), [[しゃく]] (shaku)
