--- a/wiki/blacktress.wikitext
+++ b/wiki/blacktress.wikitext
@@ -1,3 +1,5 @@
-The term '''''Blacktress''''' is used to describe any of of a number of [[African American]] women who were pioneers of the film industry. Because of [[segregation]], [[slavery]] and [[racism]] it was very difficult for people of colour (specifically women) to break into the film industry as actresses. More often then not in the early years of Hollywood black women portrayed maids, slaves or servants. The term "blacktress" was coined in praise of women who struggled to break open doors for black females in film. 
+The term '''''Blacktress''''' is used to describe any of of a number of [[African American]] women who were pioneers of the film industry. Because of [[segregation]], [[slavery]] and [[racism]] it was very difficult for people of colour (specifically women) to break into the film industry as actresses. More often than not in the early years of Hollywood black women portrayed maids, slaves or servants. The term "blacktress" was coined in praise of women who struggled to break open doors for black females in film. 
 
 Some notable blacktresses include [[LaWanda Page]], [[Dorothy Dandridge]] and [[Lena Horne]].
+
+{{stub}}
