Adding "rogering" as a noun <roger#59234>

--- a/wiki/roger.wikitext
+++ b/wiki/roger.wikitext
@@ -4,6 +4,9 @@
 
 #A male [[given name]].
 
+==Noun==
+'''rogering''' - To give someone a ''rogering'' is to ''roger'' them
+
 ===Transitive verb===
 '''to roger''' ('''rogering''', '''rogered''', '''rogered''')
 
