--- a/wiki/%E7%89%9B.wikitext
+++ b/wiki/%E7%89%9B.wikitext
@@ -28,6 +28,53 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': ngau4
 
+===Compounds===
+*[[牛蒡]]
+*[[牛鼻子]]
+*[[牛鞭]]
+*[[牛车]]
+*[[牛刀小试]]
+*[[牛鼎烹鸡]]
+*[[牛痘]]
+*[[牛痘苗]]
+*[[牛犊]]
+*[[牛顿]]
+*[[牛耳]]
+*[[牛革]]
+*[[牛倌]], [[牛倌儿]]
+*[[牛鬼蛇神]]
+*[[牛黄]]
+*[[牛角]]
+*[[牛角尖]], [[牛角尖儿]]
+*[[牛劲]], [[牛劲儿]]
+*[[牛圈]]
+*[[牛郎]]
+*[[牛郎星]]
+*[[牛郎织女]]
+*[[牛马]]
+*[[牛毛]]
+*[[牛毛雨]]
+*[[牛虻]]
+*[[牛奶]]
+*[[牛腩]]
+*[[牛年马月]]
+*[[牛排]]
+*[[牛棚]]
+*[[牛皮]]
+*[[牛皮癣]]
+*[[牛皮纸]]
+*[[牛脾气]]
+*[[牛气]]
+*[[牛肉]]
+*[[牛溲马勃]]
+*[[牛头不对马嘴]]
+*[[牛头马面]]
+*[[牛蛙]]
+*[[牛性]]
+*[[牛饮]]
+*[[牛仔]], [[牛崽]]
+*[[牛仔裤]], [[牛崽裤]]
+
 * '''Other info''': 
 
 ----
@@ -37,6 +84,15 @@
 * '''Readings'''
 ** '''[[On]]''': [[ぎゅう]] (gyū)
 ** '''[[Kun]]''': [[うし]] (ushi)
+
+===Compounds===
+*[[牛舎]]
+*[[牛車]]
+*[[牛耳る]]
+*[[牛肉]]
+*[[牛乳]]
+*[[牛蒡]]
+*[[牛酪]]
 
 * '''Other info''':  
 
